@@ -1,3 +1,5 @@
+- fixed bug in loading levelsets formated in DOS (2011/03/07 MS)
+- added comfortable levelset selection (2011/03/07 MS)
 - fixed compile issue with libpng-1.5 (2011/03/02 Thomas Klausner)
 - improved french localisation (2011/03/02 stormi)
 
